--- a/src/components/index/Banner.astro
+++ b/src/components/index/Banner.astro
@@ -17,7 +17,7 @@
   </div>
 
   <div id="camion" class="absolute bottom-0 transform -translate-x-full w-1/6">
-    <svg class="mx-auto" viewBox="0 0 300 170">
+    <svg viewBox="0 0 300 170">
       <path
         id="contorno"
         fill="#fff"
