--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -4,20 +4,34 @@ import "@fontsource-variable/nunito";
 interface Props {
   title: string;
   description: string;
+  image?: string;
   bodyClass?: string;
 }
 
-const { title, description, bodyClass } = Astro.props;
+const { title, description, image, bodyClass } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="es" data-theme="pozosscz">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content={description} />
-    <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+
+    <!-- Meta tags -->
+    <meta name="title" content={title} />
+    <meta name="description" content={description} />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content={title} />
+    <meta property="og:url" content={Astro.url} />
+    <meta property="og:description" content={description} />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content={image} />
+
+
   </head>
   <body class=`${bodyClass} h-fit`>
     <slot />
