--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import Banner from "../components/index/Banner.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import MainLayout from "../layouts/MainLayout.astro";
+
+export const prerender = true;
 ---
 
 <MainLayout
