--- a/src/pages/mapa.astro
+++ b/src/pages/mapa.astro
@@ -7,7 +7,7 @@ import "leaflet-draw/dist/leaflet.draw.css";
 import "leaflet.control.layers.tree/L.Control.Layers.Tree.css";
 import "leaflet.markercluster/dist/MarkerCluster.Default.css";
 
-export const prerender = false;
+
 ---
 
 <MainLayout
@@ -225,7 +225,6 @@ export const prerender = false;
       ErrorEvent,
       LeafletEvent,
       Path,
-      MarkerClusterGroupOptions
     } from "leaflet";
     import type { Poligonos, Precios } from "../types/types";
     import { createToast } from "../components/utils/toast";
@@ -914,7 +913,7 @@ export const prerender = false;
       }
 
         // Asegúrate de que postData es una función asíncrona que retorna una promesa
-      await postData(formName.value, formPhone.value, precioFinalRedondeado, marker).then((r) => {
+      await postData(formName.value, formPhone.value, precioFinalRedondeado, marker).then(() => {
         createToast('postData', 'map', 'Datos guardados con éxito', 'top', 'success');
       }).catch((error) => {
         createToast('postData', 'map', `${error}`	, 'top', 'error');
