--- a/src/components/index/Banner.astro
+++ b/src/components/index/Banner.astro
@@ -94,7 +94,7 @@
 <script>
   import anime from "animejs";
   import KUTE from "./kute-esm";
-  const API_DOMAIN = import.meta.env.API_DOMAIN;
+  const API_DOMAIN = import.meta.env.PUBLIC_API_DOMAIN;
 
   async function loadBannerData(): Promise<void> {
     try {
