--- a/src/pages/mapa.astro
+++ b/src/pages/mapa.astro
@@ -7,7 +7,7 @@ import "leaflet-draw/dist/leaflet.draw.css";
 import "leaflet.control.layers.tree/L.Control.Layers.Tree.css";
 import "leaflet.markercluster/dist/MarkerCluster.Default.css";
 
-const API_DOMAIN = import.meta.env.API_DOMAIN;
+const API_DOMAIN = import.meta.env.PUBLIC_API_DOMAIN;
 ---
 
 <MainLayout
