--- a/src/pages/mapa.astro
+++ b/src/pages/mapa.astro
@@ -266,7 +266,7 @@ const API_DOMAIN = import.meta.env.PUBLIC_API_DOMAIN;
     const osm = tileLayer("https://{s}.tile.osm.org/{z}/{x}/{y}.png", {
       maxZoom: 19,
       attribution:
-        '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
+        '&copy; <a href="https://osm.org/copyright">OpenStreetMap</a> contributors',
     }).addTo(map);
 
     const esri = tileLayer(
