--- a/src/pages/cotiza.astro
+++ b/src/pages/cotiza.astro
@@ -82,7 +82,7 @@ export const prerender = true;
       const osm = tileLayer("https://{s}.tile.osm.org/{z}/{x}/{y}.png", {
         maxZoom: 19,
         attribution:
-          '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
+          '&copy; <a href="https://osm.org/copyright">OpenStreetMap</a> contributors',
       }).addTo(map);
 
       const esri = tileLayer(
