--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,23 +30,32 @@ export const prerender = true;
     <div class="flex flex-wrap gap-1 md:flex-row">
       <CardAlcance 
       icon="alcance/leaf" 
-      title="Alcance" 
-      description="Limpieza de pozos sépticos en Santa Cruz" 
+      title="Medio Ambiente" 
+      description=`Porque al igual que vos, amamos a Santa
+Cruz y la queremos ver verde y limpia. Juntos cuidamos nuejtro ambiente, ¡nos encargamos de todo!`
       />
       <CardAlcance 
-      icon="alcance/servicios" 
-      title="Alcance" 
-      description="Limpieza de pozos sépticos en Santa Cruz" 
+      icon="alcance/sombrero" 
+      title="Hacemoj" 
+      description=`Limpieza de Pozos Sépticos,
+Limpieza de Cámaras Sépticas, Limpieza
+de Pozos Ciegos, Limpieza de Fosas
+Sépticas y Destranques de Cañerías.
+Nuestro trabajo es garanti(Saó)`
       />
       <CardAlcance 
       icon="alcance/ubicacion" 
-      title="Alcance" 
-      description="Limpieza de pozos sépticos en Santa Cruz" 
+      title="Estamos cerca" 
+      description=`Atendemos Warnes, Cotoca, La Guar-
+dia, y en Santa Cruz de la SIerra: el
+Centro, Plan 3000, Villa 1ro de Mayo,
+Pampa de la Isla, Zona Norte, El
+Palmar, Urubó, Parque Industrial,`
       />
       <CardAlcance 
       icon="alcance/camion" 
-      title="Alcance" 
-      description="Limpieza de pozos sépticos en Santa Cruz" 
+      title="Llama ya!!!" 
+      description="Llámanos o escribinos para conocer nuestras (tari)fas." 
       />
     </div>
   </section>
